--- a/home.html
+++ b/home.html
@@ -6,20 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TV Show Search App</title>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
-<body>
-   <link rel="stylesheet" href="style.css">
-  <div class="container">
+<body class="container-fluid ">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+  <div class="container mb-3">
     <center>
 
-      <h1>Favourite TV Shows</h1>
+      <h1 class="text-bg-light p-3">Favourite TV Shows</h1>
        <form id="searchForm">
-        <input type="search"   name="query" placeholder="TV Movie Title">
-        <button class="button-7">Search</button>
+        <input type="search"   name="query" placeholder="TV show Title">
+        <button class="btn btn-success">Search</button>
         
     </form>
-    <div><button class="button-7" onclick="removeImages()">Reset</button></div>
-    <div id="showImg"></div>
+    <div><button class="btn btn-danger" onclick="removeImages()">Reset</button></div>
+    <div class="container text-center mt-3" >
+      <div class="row row-cols-auto" id="showImg">
+
+      </div>
+    </div>
+
+  
 </center>
     <script src="app.js"></script>
   </div>
